--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Circular Std';
-font-style: normal;
+  font-style: normal;
 }
 
 
@@ -18,7 +18,8 @@ font-style: normal;
 
 .nav-wrapper {
   width: 100%;
-  position: -webkit-sticky; /* Safari */
+  position: -webkit-sticky;
+  /* Safari */
   position: sticky;
   top: 0;
   /* background-color: #fff; */
@@ -29,9 +30,9 @@ font-style: normal;
   height: 5px;
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   background-size: 400% 400%;
-  	-webkit-animation: gradbar 15s ease infinite;
-	-moz-animation: gradbar 15s ease infinite;
-	animation: gradbar 15s ease infinite;
+  -webkit-animation: gradbar 15s ease infinite;
+  -moz-animation: gradbar 15s ease infinite;
+  animation: gradbar 15s ease infinite;
 }
 
 /* NAVIGATION */
@@ -44,11 +45,12 @@ font-style: normal;
   padding: 10px;
   overflow: hidden;
 }
-.alumni{
+
+.alumni {
   display: flex;
 }
 
-.navbar p{
+.navbar p {
   display: inline;
   margin-left: 10px;
   margin-top: 15px;
@@ -56,7 +58,7 @@ font-style: normal;
   color: #23A6D5;
 }
 
-.navbar p::after{
+.navbar p::after {
   content: " Alumni";
   /* font: 24px; */
   color: #ffffff;
@@ -75,11 +77,11 @@ font-style: normal;
 .navbar ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(5,1fr);
+  grid-template-columns: repeat(5, 1fr);
   justify-self: end;
-  }
+}
 
-nav ul li{
+nav ul li {
   justify-self: flex-end;
   /* padding-left: 60px; */
   margin-left: 30px;
@@ -87,7 +89,7 @@ nav ul li{
   color: #ffffff;
 }
 
-li:nth-child(4n-1){
+li:nth-child(4n-1) {
   /* color: #23D5AB; */
   padding-left: 20px;
   padding-right: 20px;
@@ -97,7 +99,7 @@ li:nth-child(4n-1){
   overflow: hidden;
 }
 
-li:nth-child(4n){
+li:nth-child(4n) {
   /* color: #23D5AB; */
   padding-left: 20px;
   padding-right: 20px;
@@ -125,7 +127,7 @@ li:nth-child(4n){
   width: 100%;
   height: 50vh;
   min-height: 350px;
-  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -196,7 +198,7 @@ li:nth-child(4n){
 
 /* MOBILE MENU & ANIMATION */
 
-.menu-toggle .bar{
+.menu-toggle .bar {
   width: 25px;
   height: 3px;
   background-color: #3f3f3f;
@@ -212,22 +214,22 @@ li:nth-child(4n){
   display: none;
 }
 
-.menu-toggle:hover{
+.menu-toggle:hover {
   cursor: pointer;
 }
 
-#mobile-menu.is-active .bar:nth-child(2){
+#mobile-menu.is-active .bar:nth-child(2) {
   opacity: 0;
 }
 
-#mobile-menu.is-active .bar:nth-child(1){
+#mobile-menu.is-active .bar:nth-child(1) {
   -webkit-transform: translateY(8px) rotate(45deg);
   -ms-transform: translateY(8px) rotate(45deg);
   -o-transform: translateY(8px) rotate(45deg);
   transform: translateY(8px) rotate(45deg);
 }
 
-#mobile-menu.is-active .bar:nth-child(3){
+#mobile-menu.is-active .bar:nth-child(3) {
   -webkit-transform: translateY(-8px) rotate(-45deg);
   -ms-transform: translateY(-8px) rotate(-45deg);
   -o-transform: translateY(-8px) rotate(-45deg);
@@ -237,54 +239,60 @@ li:nth-child(4n){
 /* KEYFRAME ANIMATIONS */
 
 @-webkit-keyframes gradbar {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 @-moz-keyframes gradbar {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 @keyframes gradbar {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 /* Media Queries */
 
-  /* Mobile Devices - Phones/Tablets */
+/* Mobile Devices - Phones/Tablets */
 
-@media only screen and (max-width: 720px) { 
+@media only screen and (max-width: 720px) {
   .features {
     flex-direction: column;
     padding: 50px;
   }
-  
-  
+
+
   /* MOBILE NAVIGATION */
-     
+
   .navbar ul {
     display: flex;
     flex-direction: column;
@@ -298,80 +306,81 @@ li:nth-child(4n){
     text-align: center;
     overflow: hidden;
   }
-  
+
   .navbar li {
     padding: 15px;
   }
 
-  .navbar ul li{
+  .navbar ul li {
     margin-left: 0;
   }
-  
+
   .navbar li:first-child {
     margin-top: 50px;
   }
-  
+
   .navbar li a {
     font-size: 1rem;
     color: #000;
   }
 
-  li:nth-child(4n-1){
+  li:nth-child(4n-1) {
     border: none;
   }
 
-  li:nth-child(4n){
+  li:nth-child(4n) {
     border: none;
     background: none;
   }
-   
-  .menu-toggle, .bar {
+
+  .menu-toggle,
+  .bar {
     display: block;
     cursor: pointer;
   }
-  
+
   .mobile-nav {
-  transform: translate(0%)!important;
-}
-  
+    transform: translate(0%) !important;
+  }
+
   /* SECTIONS */
-  
+
   .headline {
     height: 20vh;
   }
-    
+
   .feature-container p {
     margin-bottom: 25px;
   }
-  
+
   .feature-container {
     margin-top: 20px;
   }
-  
+
   .feature-container:nth-child(2) {
     order: -1;
   }
-  
+
   /* SEARCH DISABLED ON MOBILE */
-  
+
   #search-icon {
     display: none;
   }
-  
+
   .search-input {
-  display: none;
- }
+    display: none;
+  }
 
 
- .navbar img{
-  height: 30px;
-  width: 30px;
-  margin-left: 10px;
- }
+  .navbar img {
+    height: 30px;
+    width: 30px;
+    margin-left: 10px;
+  }
 
- .navbar p{
-  font-size: 12px;
-  margin-top: 2px;
- }
-  
+  .navbar p {
+    font-size: 12px;
+    margin-top: 2px;
+  }
+
 }
