create the reset password confirmation page

--- a/src/pages/forgot-password/password-reset/ForgotPassword.css
+++ b/src/pages/forgot-password/password-reset/ForgotPassword.css
@@ -25,7 +25,7 @@
 }
 
 .fp__section div:nth-child(3){
-    width: 30%;
+    /* width: 30%; */
 }
 
 .fp__div1 img{
@@ -51,12 +51,18 @@
 
 /* FORGOT PASSWORD CONTENT */
 
-.fps__content h3, p{
+.fps__content h3{
     text-align: center;
+    margin-top: 10px;
+}
+
+.fps__content p{
+    text-align: center;
+    margin-top: 10px;
 }
 
 .fps__content h3, p{
-    padding: 0 50px;
+    /* padding: 0 50px; */
 }
 
 .fps__content p{
@@ -97,7 +103,7 @@
     }
 
     .fp__div1 img{
-        height: 162px;
+        height: 172px;
     width: 242px;
         margin-top: 350px;
     
@@ -116,17 +122,17 @@
     }
 
     .fp__section div:nth-child(1){
-        width: 15%;
+        width: 10%;
     }
 
     .fp__section div:nth-child(3){
-        width: 15%;
+        width: 10%;
     }
 
     .fp__section div:nth-child(2){
-        width: 90%;
-        height: 320px;
-        margin: 60% 0 40% 0;
+        width: 80%;
+        /* height: 320px; */
+        margin: 30% 0 70% 0;
         border-radius: 6px;
         z-index: 2;
     }
