--- a/src/pages/forgot-password/password-reset/ForgotPassword.css
+++ b/src/pages/forgot-password/password-reset/ForgotPassword.css
@@ -61,9 +61,9 @@
     margin-top: 10px;
 }
 
-.fps__content h3, p{
-    /* padding: 0 50px; */
-}
+/* .fps__content h3, p{
+    padding: 0 50px;
+} */
 
 .fps__content p{
     font-size: 12px;
@@ -75,10 +75,40 @@
 }
 
 .fps__content form input{
-    border-radius: 6px;
-    border: 1px solid;
-    padding: 10px; 
+    /* height: 58px; */
+    /* border-radius: 6px; */
+    /* border: 1px solid; */
+    /* padding: 20px 10px 0px 10px ;  */
 }
+
+.reset__label {
+    display: block;
+	position: relative;
+    margin-top: -45px;
+    margin-left: 20px;
+	/* top: -55px; */
+	/* left: 10px; */
+    /* color: #999; */
+	cursor: text;
+	transition: all .15s ease-in-out 0s;
+}
+
+
+.form-textbox {
+	width: 100%;
+	padding: 20px;
+}
+
+
+.form-textbox:focus ~ .reset__label,
+.form-textbox:valid ~ .reset__label {
+	top: -3em;
+	left: 0;
+	font-size: .8em;
+	color: inherit;
+	cursor: pointer;
+}
+
 .fps__content form button{
     background: #0C7DE6;
     color: #FFFFFF;
@@ -87,9 +117,6 @@
     border-radius: 6px; 
     border: none;
 }
-
-
-
 
 
 /* MOBILE STYLING */
