--- a/src/pages/forgot-password/password-reset/ForgotPassword.css
+++ b/src/pages/forgot-password/password-reset/ForgotPassword.css
@@ -7,7 +7,6 @@
 
 .fp__section{
     display: flex;
-    /* justify-content: space-evenly; */
     width: 100%;
 }
 
@@ -24,30 +23,6 @@
     z-index: 2;
 }
 
-.fp__section div:nth-child(3){
-    /* width: 30%; */
-}
-
-.fp__div1 img{
-    /* height: 692px; */
-    /* width: 842px; */
-    margin-left: -100px;
-    margin-top: 50%;
-
-}
-
-.fp__div2 img{
-    margin-top: 22px;
-    margin-left: 22px;
-}
-
-.fp__div3 img{
-    height: 350px;
-    margin-left: -150px;
-    padding-top: 20px;
-
-}
-
 
 /* FORGOT PASSWORD CONTENT */
 
@@ -61,9 +36,9 @@
     margin-top: 10px;
 }
 
-/* .fps__content h3, p{
+.fps__content p, h3{
     padding: 0 50px;
-} */
+}
 
 .fps__content p{
     font-size: 12px;
@@ -72,13 +47,6 @@
 .fps__content form{
     display: grid;
     padding: 40px 50px;
-}
-
-.fps__content form input{
-    /* height: 58px; */
-    /* border-radius: 6px; */
-    /* border: 1px solid; */
-    /* padding: 20px 10px 0px 10px ;  */
 }
 
 .reset__label {
@@ -135,11 +103,7 @@
         margin-top: 350px;
     
     }
-    
-    .fp__div2 img{
-        margin-top: 22px;
-        margin-left: 22px;
-    }
+
     
     .fp__div3 img{
         height: 175px;
