--- a/src/pages/error/Error.css
+++ b/src/pages/error/Error.css
@@ -7,4 +7,9 @@
 .error-page h1{
     text-align: center;
     color: black;
+    font-size: 20px;
+}
+
+.error-page a{
+    text-decoration: dotted;
 }
